--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,13 +44,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Azure CLI
-        uses: azure/setup-azurecli@v1
+        uses: azure/azure-cli-action@v1
 
       - name: Login to Azure (Dev)
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS_DEV }}
-          
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
