--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: /test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline/index.html
+          path: /test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline/sample.js
 
   deploy:
     runs-on: ubuntu-latest
