--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,8 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: /test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline/index.html
-          path: /test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline/sample.js
+          path: /home/tanisha/test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline-/CI-CD
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,6 +50,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: deployment-folder
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -58,5 +58,5 @@ jobs:
         with:
           app-name: 'T-web-app'
           slot-name: 'T-web-slot'
-          package: .
+          package: deployment-folder
           publish-profile: ${{ secrets.__publishingprofilesecretname__ }}
