--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: /home/tanisha/test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline-/sample.js
+          path: /home/tanisha/test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline-/project
 
   deploy:
     runs-on: ubuntu-latest
