--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: '22.x'
 
       - name: npm install, build, and test
+        working-directory: ./project
         run: |
           npm install
           npm run build --if-present
@@ -30,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: /home/tanisha/test1/Azure-Infrastructure-with-Terraform-and-CI-CD-pipeline-/project/package.json
+          path: ./project
 
   deploy:
     runs-on: ubuntu-latest
