--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,6 @@ jobs:
           node-version: '22.x'
 
       - name: npm install, build, and test
-        working-directory: ./project
         run: |
           npm install
           npm run build --if-present
@@ -31,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./project
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
