--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
 "name": "sample-node-app",
 "version": "1.0.0",
 "scripts": {
-"start": "node app.js",
-"test": "node tests/app.test.js"
+"start": "node app.js"
 },
 "dependencies": {
 "express": "^4.18.2"
